impl solution for loading jnaitvehook native libs within jlink image + use latest version